Prevent image overlap on form elements (mobile view)

--- a/src/scss/_bechdel.scss
+++ b/src/scss/_bechdel.scss
@@ -19,6 +19,7 @@
     top: 50%;
     transform: translate(20%, -50%);
     opacity: 0.3;
+    pointer-events: none;
   }
 
   &__header-title {
