--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -21,6 +21,7 @@
     transform: translate(-30%, -45%) rotate(180deg);
     opacity: 0.5;
     z-index: -1;
+    pointer-events: none;
   }
 
   &__header-title {
